name:            hamlet
version:         0.7.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Haml-like template files that are compile-time checked
description:
    Hamlet gives you a type-safe tool for generating HTML code. It works via Quasi-Quoting, and generating extremely efficient output code. The syntax is white-space sensitive, and it helps you avoid cross-site scripting issues and 404 errors. Please see the documentation at <http://docs.yesodweb.com/book/hamlet/> for more details.
    .
    Here is a quick overview of hamlet html. Due to haddock escaping issues, we can't properly show variable insertion, but we are still going to show some conditionals. Please see http://docs.yesodweb.com/book/templates for a thorough description
    .
    > !!!
    > <html
    >     <head
    >         <title>Hamlet Demo
    >     <body
    >         <h1>Information on John Doe
    >         <h2
    >             $if isMarried person
    >                 Married
    >             $else
    >                 Not married
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/

flag test
  description: Build the executable to run unit tests
  default: False

library
    build-depends:   base             >= 4       && < 5
                   , bytestring       >= 0.9     && < 0.10
                   , template-haskell
                   , blaze-html       >= 0.4     && < 0.5
                   , parsec           >= 2       && < 4
                   , failure          >= 0.1     && < 0.2
                   , text             >= 0.7     && < 0.12
                   , containers       >= 0.2     && < 0.5
                   , json-types       >= 0.1     && < 0.2
                   , json-enumerator  >= 0.0     && < 0.1
                   , blaze-builder    >= 0.2     && < 0.3
    exposed-modules: Text.Hamlet
                     Text.Hamlet.RT
                     Text.Cassius
                     Text.Lucius
                     Text.Julius
    other-modules:   Text.Hamlet.Parse
                     Text.Hamlet.Quasi
                     Text.Hamlet.Debug
                     Text.MkSizeType
                     Text.Shakespeare
                     Text.Css
    ghc-options:     -Wall

executable             runtests
    if flag(test)
        Buildable: True
        cpp-options:   -DTEST
        build-depends: QuickCheck >= 2 && < 3,
                       HUnit,
                       test-framework-hunit,
                       test-framework
    else
        Buildable: False
    main-is:         runtests.hs

source-repository head
  type:     git
  location: git://github.com/snoyberg/hamlet.git
