name:            hamlet
version:         0.8.2.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Haml-like template files that are compile-time checked
description:
    Hamlet gives you a type-safe tool for generating HTML code. It works via Quasi-Quoting, and generating extremely efficient output code. The syntax is white-space sensitive, and it helps you avoid cross-site scripting issues and 404 errors. Please see the documentation at <http://docs.yesodweb.com/book/hamlet/> for more details.
    .
    Here is a quick overview of hamlet html. Due to haddock escaping issues, we can't properly show variable insertion, but we are still going to show some conditionals. Please see http://docs.yesodweb.com/book/templates for a thorough description
    .
    > !!!
    > <html>
    >     <head>
    >         <title>Hamlet Demo
    >     <body>
    >         <h1>Information on John Doe
    >         <h2>
    >             $if isMarried person
    >                 Married
    >             $else
    >                 Not married
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/

flag test
  description: Build the executable to run unit tests
  default: False

library
    if flag(test)
        Buildable: False
    build-depends:   base             >= 4       && < 5
                   , bytestring       >= 0.9     && < 0.10
                   , template-haskell
                   , blaze-html       >= 0.4     && < 0.5
                   , parsec           >= 2       && < 4
                   , failure          >= 0.1     && < 0.2
                   , text             >= 0.7     && < 0.12
                   , containers       >= 0.2     && < 0.5
                   , blaze-builder    >= 0.2     && < 0.4
                   , process          >= 1.0     && < 1.1
    exposed-modules: Text.Hamlet
                     Text.Hamlet.NonPoly
                     Text.Hamlet.RT
                     Text.Cassius
                     Text.Lucius
                     Text.Julius
                     Text.Coffee
                     Text.Romeo
                     Text.Shakespeare
    other-modules:   Text.Hamlet.Parse
                     Text.Hamlet.Quasi
                     Text.Hamlet.Debug
                     Text.MkSizeType
                     Text.Css
    ghc-options:     -Wall

test-suite runtests
    hs-source-dirs: tests
    main-is: runtests.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: hamlet >= 0.7.2,
                   base             >= 4       && < 5,
                   parsec           >= 2       && < 4,
                   containers       >= 0.2     && < 0.5,
                   json-types       >= 0.1     && < 0.2,
                   text             >= 0.7     && < 0.12,
                   HUnit,
                   QuickCheck >= 2 && < 3,
                   test-framework-hunit,
                   test-framework


source-repository head
  type:     git
  location: git://github.com/snoyberg/hamlet.git
