name:            shakespeare
version:         2.0.7
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        A toolkit for making compile-time interpolated templates
description:
    Shakespeare is a family of type-safe, efficient template languages. Shakespeare templates are expanded at compile-time, ensuring that all interpolated variables are in scope. Variables are interpolated according to their type through a typeclass.
    .
    Shakespeare templates can be used inline with a quasi-quoter or in an external file.
    .
    Note there is no dependency on haskell-src-extras. Instead Shakespeare believes logic should stay out of templates and has its own minimal Haskell parser.
    .
    Packages that use this: shakespeare-js, shakespeare-css, shakespeare-text, hamlet, and xml-hamlet
    .
    Please see the documentation at <http://www.yesodweb.com/book/shakespearean-templates> for more details.

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates
extra-source-files:
  test/reload.txt
  test/texts/*.text
  test/juliuses/*.julius
  test/juliuses/*.coffee
  test-messages/*.msg
  test/cassiuses/*.cassius
  test/cassiuses/*.lucius
  test/hamlets/*.hamlet
  test/tmp.hs
  ChangeLog.md

library
    build-depends:   base             >= 4       && < 5
                   , time             >= 1
                   , containers
                   , template-haskell >= 2.7
                   , parsec           >= 2       && < 4
                   , text             >= 0.7
                   , process          >= 1.0
                   , ghc-prim
                   , bytestring
                   , directory        >= 1.2
                   , aeson
                   , blaze-markup
                   , blaze-html
                   , exceptions
                   , transformers
                   , vector
                   , unordered-containers
                   , scientific

    exposed-modules: Text.Shakespeare.I18N
                     Text.Shakespeare.Text
                     Text.Roy
                     Text.Julius
                     Text.Coffee
                     Text.Hamlet
                     Text.Hamlet.RT
                     Text.Hamlet.Runtime
                     Text.Lucius
                     Text.Cassius
                     Text.Shakespeare.Base
                     Text.Shakespeare
                     Text.TypeScript
    other-modules:   Text.Hamlet.Parse
                     Text.Css
                     Text.MkSizeType
                     Text.IndentToBrace
                     Text.CssCommon
    ghc-options:     -Wall

    if flag(test_export)
      cpp-options: -DTEST_EXPORT

    extensions: TemplateHaskell

    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

    if os(windows)
      CPP-Options: "-DWINDOWS"

    if flag(test_coffee)
        cpp-options: -DTEST_COFFEE

    if flag(test_roy)
        cpp-options: -DTEST_ROY

    if flag(test_export)
        cpp-options: -DTEST_EXPORT

Flag test_export
  default: False

flag test_coffee
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

flag test_roy
    description: render tests through coffeescript render function
    -- cabal configure --enable-tests -ftest_coffee && cabal build && dist/build/test/test
    default: False

-- Commented out due to concerns that the Hackage page looks too intimidating.

-- flag servius
--     description: build the servius web server
--     default: True
--
-- Executable servius
--   Main-is:       servius.hs
--   hs-source-dirs: app
--   if flag(servius)
--       buildable: True
--   else
--       buildable: False
--   Build-depends: base            >= 4                  && < 5
--                , wai-app-static  >= 2.0.1              && < 2.1
--                , bytestring      >= 0.9.1.4
--                , text            >= 0.7
--                , http-types
--                , shakespeare
--                , wai             >= 1.3                && < 2.2
--                , blaze-html      >= 0.5
--                , blaze-builder

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:  Text.Shakespeare.BaseSpec
                    Text.Shakespeare.I18NSpec
                    Text.Shakespeare.JsSpec
                    Text.Shakespeare.TextSpec
                    Text.Shakespeare.CssSpec
                    Text.Shakespeare.HamletSpec
                    Quoter
                    HamletTestTypes

    cpp-options: -DTEST_EXPORT

    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: base             >= 4       && < 5
                 , shakespeare
                 , time             >= 1
                 , containers
                 , parsec           >= 2       && < 4
                 , hspec            == 2.*
                 , text             >= 0.7
                 , process
                 , template-haskell >= 2.7
                 , ghc-prim
                 , HUnit
                 , bytestring
                 , directory
                 , aeson
                 , transformers
                 , blaze-markup
                 , blaze-html
                 , exceptions

    extensions: TemplateHaskell


source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
