name:            hamlet
version:         1.1.1
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Haml-like template files that are compile-time checked
description:
    Hamlet gives you a type-safe tool for generating HTML code. It works via Quasi-Quoting, and generating extremely efficient output code. The syntax is white-space sensitive, and it helps you avoid cross-site scripting issues and 404 errors. Please see the documentation at <http://www.yesodweb.com/book/shakespearean-templates> for more details.
    .
    Here is a quick overview of hamlet html. Due to haddock escaping issues, we can't properly show variable insertion, but we are still going to show some conditionals. Please see <http://www.yesodweb.com/book/shakespearean-templates> for a thorough description
    .
    > !!!
    > <html>
    >     <head>
    >         <title>Hamlet Demo
    >     <body>
    >         <h1>Information on John Doe
    >         <h2>
    >             $if isMarried person
    >                 Married
    >             $else
    >                 Not married
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/shakespearean-templates
extra-source-files:
  test/hamlets/double-foralls.hamlet
  test/hamlets/external-debug.hamlet
  test/hamlets/external-debug2.hamlet
  test/hamlets/external-debug3.hamlet
  test/hamlets/external.hamlet
  test/hamlets/nonpolyhamlet.hamlet
  test/hamlets/nonpolyhtml.hamlet
  test/hamlets/nonpolyihamlet.hamlet
  test/HamletTest.hs
  test/tmp.hs
  test.hs

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 1.0.1   && < 1.1
                   , bytestring       >= 0.9
                   , template-haskell
                   , parsec           >= 2       && < 4
                   , failure          >= 0.1     && < 0.3
                   , text             >= 0.7     && < 0.12
                   , containers       >= 0.2
                   , blaze-builder    >= 0.2     && < 0.4
                   , process          >= 1.0     && < 1.2
                   , blaze-html       >= 0.5     && < 0.6
                   , blaze-markup     >= 0.5.1   && < 0.6

    exposed-modules: Text.Hamlet
                     Text.Hamlet.RT
    other-modules:   Text.Hamlet.Parse
    ghc-options:     -Wall
    if impl(ghc >= 7.4)
       cpp-options: -DGHC_7_4

test-suite test
    hs-source-dirs: test
    main-is: ../test.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: hamlet
                 , base             >= 4       && < 5
                 , parsec           >= 2       && < 4
                 , containers       >= 0.2     && < 0.5
                 , text             >= 0.7     && < 1
                 , HUnit
                 , hspec            >= 1.3
                 , blaze-html       >= 0.5     && < 0.6
                 , blaze-markup     >= 0.5.1   && < 0.6


source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
