Name:                servius
Version:             0.0.1
Synopsis:            Serve Shakespearean templates via Warp
Homepage:            http://github.com/yesodweb/hamlet
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Description:         Does not support any variable interpolation. Supports Hamlet and Lucius files (must have .hamlet and .lucius file extensions, respectively).


Executable servius
  Main-is:       servius.hs
  Build-depends: base            >= 4                  && < 5
               , warp            >= 1.0                && < 1.1
               , wai-app-static  >= 1.0                && < 1.1
               , wai-extra       >= 1.0                && < 1.1
               , cmdargs         >= 0.6.7
               , directory       >= 1.0
               , containers      >= 0.2                && < 0.5
               , bytestring      >= 0.9.1.4
               , text            >= 0.7
               , blaze-builder
               , blaze-html
               , http-types
               , hamlet
               , shakespeare-css
               , transformers
               , wai
