Name:                servius
Version:             1.0.0.1
Synopsis:            Serve Shakespearean templates via Warp
Homepage:            http://github.com/yesodweb/hamlet
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Description:         Does not support any variable interpolation. Supports Hamlet and Lucius files (must have .hamlet and .lucius file extensions, respectively).


Executable servius
  Main-is:       servius.hs
  Build-depends: base            >= 4                  && < 5
               , warp            >= 1.2                && < 1.3
               , wai-app-static  >= 1.2                && < 1.3
               , wai-extra       >= 1.2                && < 1.3
               , cmdargs         >= 0.6.7
               , directory       >= 1.0
               , containers      >= 0.2
               , bytestring      >= 0.9.1.4
               , text            >= 0.7
               , blaze-builder
               , blaze-html
               , http-types
               , hamlet          >= 1.0                && < 1.1
               , shakespeare-css >= 1.0                && < 1.1
               , transformers
               , wai             >= 1.2                && < 1.3

source-repository head
  type:     git
  location: git://github.com/yesodweb/shakespeare.git
