name:            shakespeare-css
version:         0.10.4
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Stick your haskell variables into css at compile time.
description:
    .
    Shakespeare is a template family for type-safe, efficient templates with simple variable interpolation . Shakespeare templates can be used inline with a quasi-quoter or in an external file. Shakespeare interpolates variables according to the type being inserted.
    In this case, the variable type needs a ToCss instance.
    .
    This package contains 2 css template languages. The Cassius language uses whitespace to avoid the need for closing brackets and semi-colons. Lucius does not care about whitespace and is a strict superset of css. There are also some significant conveniences added for css.
    .
    Please see http://docs.yesodweb.com/book/templates for a more thorough description and examples
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/templates
extra-source-files:
  test/cassiuses/external1.cassius
  test/cassiuses/external1.lucius
  test/cassiuses/external2.cassius
  test/cassiuses/external2.lucius
  test/cassiuses/external-media.lucius
  test/cassiuses/external-nested.lucius
  test/ShakespeareCssTest.hs
  test.hs

library
    build-depends:   base             >= 4       && < 5
                   , shakespeare      >= 0.10    && < 0.11
                   , template-haskell
                   , text             >= 0.7     && < 0.12
                   , process          >= 1.0     && < 1.2
                   , parsec           >= 2       && < 4

    exposed-modules: Text.Cassius
                     Text.Lucius
    other-modules:   Text.MkSizeType
                     Text.Css
    ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: ../test.hs
    type: exitcode-stdio-1.0

    ghc-options:   -Wall
    build-depends: shakespeare-css  >= 0.10    && < 0.11
                 , shakespeare      >= 0.10    && < 0.11
                 , base             >= 4       && < 5
                 , HUnit
                 , hspec            >= 0.8     && < 0.10
                 , text             >= 0.7     && < 0.12


source-repository head
  type:     git
  location: git://github.com/yesodweb/hamlet.git
